components/LandingPage/CTA/CTA.module.scss
.container {
    margin: $grid;
    text-align: left;
    margin-bottom: $grid * 2;

    @include media-query(medium) {
        margin: $grid $grid * 2 $grid * 3 $grid * 2;
    }

    @include media-query(large) {
        margin: $grid * 4 auto $grid * 6 auto;
        max-width: 930px; // Following design
    }
}

.title {
    @include font-size(l);
    color: var(--color--dark-indigo);
}

.richText {
    max-width: 750px;
    margin-right: auto;
    & p {
        color: var(--color--dark-indigo);
        @include font-size(s);
    }
}

.jobsButton {
    margin-top: $grid * 2;
}

.academyButton {
    margin-top: $grid * 2;
}

